# stix2pattern

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  app.py  make-a-change  setup.cfg  test.py  test_stix2pattern.py
shared/: errors.py
templates/: webform.html
tests/: helpers.py  sigma_samples.py  test_sigma.py
translate-sigma/: __init__.py
translatesigma/: __init__.py  blueprint.py
