[metadata]
name = STIX 2 Pattern, Unfetter Pattern Handler
version = 0.3.12
author = Unfetter
home-page = https://github.com/unfetter-discover/stix2pattern
description = RESTful API for STIX 2 Patterns and SIGMA validation & SIEM translation packages
long-description = file: README.md
license = MIT
license-file = COPYING

[pycodestyle]
ignore = W605
max-line-length = 160
